Fix separación de palabras frases difícil

--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
                     </div>
                 </div>
                 <div>
-                    <img
-                        src="src/reiniciar.png"
-                        id="btnReiniciar"
-                        class="spin"
-                        alt="reiniciar"
-                    />
+                    <button>
+                        <img
+                            src="src/reiniciar.png"
+                            id="btnReiniciar"
+                            class="spin"
+                            alt="reiniciar"
+                        />
+                    </button>
                 </div>
             </section>
 
